--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ show_excerpt: true
 # weibo:
 github: https://github.com/songrise
 # 邮件地址前面带上 mailto:
-email: mailto: 1138561926@qq.ocm
+email: mailto: 1138561926@qq.com
 # RSS 订阅
 rss: true
 # --- 社交链接 ---
