--- a/_config.yml
+++ b/_config.yml
@@ -15,11 +15,11 @@ defaults:
 
 # --- 网站信息设置 ---
 # 下面填写你的博客标题
-title: Minimalism
+title: Title
 # 下面填写你的网络常用名
-name: minimalism
+name: S0ngR1sE
 # 下面填写你的座右铭或者是个性签名
-description: Minimalism is a jekyll theme for minimalist
+description: A personal blog
 # 你博客的 url 地址，比如：https://showzeng.github.io 或者是自定义的域名
 url: https://showzeng.github.io
 # 在页尾的版权时间信息，比如：2016-2018，默认是 2018 年
@@ -39,11 +39,11 @@ show_excerpt: true
 
 # --- 社交链接 ---
 # 取消下面的注解，并填写相应的你要开启的社交链接
-twitter: https://twitter.com/showzeng
-weibo: https://weibo.com/showzeng
-github: https://github.com/showzeng/Minimalism
+# twitter: https://twitter.com/showzeng
+# weibo: https://weibo.com/showzeng
+github: https://github.com/songrise
 # 邮件地址前面带上 mailto:
-email: mailto:kingstageshow@gmail.com
+email: mailto:Jiang-Rx.connect.polyu.hk
 # RSS 订阅
 rss: true
 # --- 社交链接 ---
@@ -51,9 +51,9 @@ rss: true
 
 # --- 站点统计 ---
 # 如果你想开启站点统计，取消下面一行注解，并填写相应统计运营商给的 id，可支持多个同时开启
-site_statistics: true
+# site_statistics: true
 # cnzz (友盟统计)
-cnzz_id: 1274425891
+# cnzz_id: 1274425891
 # Baidu (百度统计)
 # baidu_id:
 # Google Analytics (谷歌统计)
@@ -74,24 +74,24 @@ copy_with_declaration: true
 # --- 打赏设置 ---
 # 开启打赏，取消下面一行注解，并将微信和支付宝的收款二维码放置在 /assets/img/ 文件夹下
 # 同时图片的文件名必须为 alipay 和 wechat
-reward: true
+# reward: true
 # 打赏的推广语
-reward_description: 如果你觉得本文对你有帮助，不妨请我喝杯咖啡
+# reward_description: 如果你觉得本文对你有帮助，不妨请我喝杯咖啡
 # --- 打赏设置 ---
 
 
 # --- 评论设置 ---
 # 开启评论，取消下面一行注解，并填写相应评论运营商提供的 id，目前仅支持来必力和 gitment
-comment: true
+# comment: true
 # 来必力 uid
 # livere_uid:
 # gitment 用户主，即 GitHub 用户名
-gitment_owner: showzeng
+# gitment_owner: showzeng
 # GitHub pages 仓库名，如：showzeng.github.io
-gitment_repo: showzeng.github.io
+# gitment_repo: showzeng.github.io
 # gitment 提供的对应 id 和 secret
-gitment_client_id: 76bb22ffd69cb9a2dc11
-gitment_secret: 1bc48766be80fbcb2802679ab796d76ac4fafe44
+# gitment_client_id: 76bb22ffd69cb9a2dc11
+# gitment_secret: 1bc48766be80fbcb2802679ab796d76ac4fafe44
 # --- 评论设置 ---
 
 # theme: jekyll-theme-minimalism
