--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ defaults:
 
 # --- 网站信息设置 ---
 # 下面填写你的博客标题
-title: Title
+title: Songrise
 # 下面填写你的网络常用名
 name: S0ngR1sE
 # 下面填写你的座右铭或者是个性签名
@@ -23,7 +23,7 @@ description: A personal blog
 # 你博客的 url 地址，比如：https://showzeng.github.io 或者是自定义的域名
 url: https://showzeng.github.io
 # 在页尾的版权时间信息，比如：2016-2018，默认是 2018 年
-copyright_time: 2018
+copyright_time: 2020
 # 标签页的 logo 及博客的头像，如果你想引用网络图片资源，就取消下面的注解，并填写图片资源的 url 地址
 # 或者，推荐的做法是将这两个图片资源下载到本地的 /assets/img/ 文件夹下，且图片名必须命名为 favicon 和 avatar
 # favicon:
@@ -43,9 +43,9 @@ show_excerpt: true
 # weibo: https://weibo.com/showzeng
 github: https://github.com/songrise
 # 邮件地址前面带上 mailto:
-email: mailto:Jiang-Rx.connect.polyu.hk
+email: mailto:ruix.jiang@connect.polyu.hk
 # RSS 订阅
-rss: true
+rss: false
 # --- 社交链接 ---
 
 
